@@ -1,6 +1,7 @@
 libstream-perl (0.8.2) UNRELEASED; urgency=low
 
   * catalog collection packaged into /usr/share/stream instead of /etc/stream
+  * Stream::Catalog::Plugin::Package implemented
 
  -- Vyacheslav Matjukhin (No comments) <mmcleric@yandex-team.ru>  Tue, 22 Jun 2010 20:22:20 +0400
 
